cd/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: insights-mcp-server
  namespace: insights-mcp-server
  labels:
    app.kubernetes.io/name: insights-mcp-server
spec:
  parentRefs:
    - name: mcp-gateway
      namespace: mcp-gateway-stg
      sectionName: https
  hostnames:
    - "insights.mcp.zilstg.dev"
  rules:
    - backendRefs:
        - name: insights-mcp-server
          port: 3001
